 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/25:
   * Don't raise any windows above OverrideRedirect windows, otherwise they
     eventually get pushed to the bottomm, bug #1447583 (Mark)
*07/01/24:
   * Detect user's shell from environment rather than assuming /bin/sh (Mark)
     FbCommands.cc
*07/01/21:
   * Allow transparency in window buttons, so they show the titlebar underneath
     instead of black (Mark)
     WinButton.cc/hh FbWinFrame.cc
   * Little fix for closing tabs with non-default gravity (Mark)
     Window.cc
   * Several fixes for menu behavior (Mark)
     - always give focus to the menu with the highlighted item
     - revert focus to menu when no other windows will take it
     - don't reopen closed submenus when moving the menu
     FocusControl.cc FbTk/Menu.cc/hh
*07/01/20:
   * Make sure styles don't change the lastwallpaper in fbsetbg (Mark)
     RootTheme.cc
   * Let styles override rootCommand in init file -- for the old behavior, add
     `background: none' to the overlay file (Mark)
     RootTheme.cc/hh Screen.cc
   * Don't place windows over toolbar at the top of the screen (Mark)
     CascadePlacement.cc
*07/01/16:
   * Make right-clicking on iconbar button behave the same way as tabs (Mark)
     IconButton.cc
   * Don't force user to reconfigure manually in order to apply menu and
     default window transparency changes; instead, in order to conserve system
     resources, do it a half-second after the user stops changing them (Mark)
     Screen.cc
*07/01/15:
   * Prevent per-window alpha menu from scrolling past 0 or 255 (Mark)
     IntResMenuItem.hh
   * Fix rootmenu disappearing on reconfigure (Mark)
     Screen.cc
*07/01/14:
   * Stay on the same workspace after a restart (Mark)
     Screen.cc
   * Properly 'properly fix' shaded and stuck windows on restart -- i.e. allow
     windows to deiconify themselves the rest of the time (Mark)
     Window.cc
   * Several changes for background style option: (Mark)